--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="./app.js" defer></script>
+  <script src="./_expo/static/js/web/index-ab0326a959a44982fc6657f9423334e5.js" defer></script>
 </body>
 </html>
